# userbot-tiktok

./: .env.example  .gitignore  README.md  ascii_to_json.py  example.env  main.py  pyproject.toml  req.txt  restart  run.sh  uv_run.sh
usrbot/: __init__.py  __main__.py  colors.py  sample_config.py  usrbot.py
usrbot/plugins/: debug.py  gen_cats.py  help.py  predict.py.bak  restart.py  statistics.py  status.py  test.py  tiktok_downloader.py  update.py
usrbot/plugins/scripts/: get_bat
usrbot/src/: user_check.py
usrbot/utils/: log.py
