[project]
name = "tiktok-userbot"
version = "0.1.2"
description = "Userbot for download tiktoks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.1",
    "pyrogram>=2.0.106",
    "python-decouple>=3.8",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
]
